# Zent-BE

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  convert.py  data.db-journal  docker-compose.yml  errors.txt  header_finder.py  seeder_errors.txt
.github/workflows/: cd.yml  docker-publish.yml  test.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20260305_081157_login_signup_migration.rs  m20260318_051423_work_orders.rs  m20260329_174031_device.rs  m20260330_104147_work_order_update.rs  m20260331_063024_part.rs  m20260408_113539_parts_update.rs
resources/: parts.json
seeder/: Cargo.toml  README.md
seeder/resources/: parts.json
seeder/src/: lib.rs  main.rs  part_condition.rs  part_status.rs  parts.rs  policy.rs  product.rs  product_model.rs  role.rs  user.rs  warranty.rs  work_order.rs  work_order_closing_form.rs  work_order_status.rs  work_order_symptom.rs
src/: config.rs  errors.rs  lib.rs  main.rs  state.rs
src/core/: config.rs  errors.rs  lookup_tables.rs  macros.rs  mod.rs  state.rs
src/entities/: account_status.rs  add_new_part_form.rs  closing_form_image_links.rs  equipment_models.rs  equipment_status.rs  equipments.rs  image.rs  images.rs  mod.rs  new_part_form_image_links.rs  new_part_forms.rs  part_catalog.rs  part_catalog_image_links.rs  part_changes.rs  part_image_links.rs  part_installations.rs  part_status.rs  part_type.rs  part_types.rs  parts.rs  parts_by_model.rs  policy.rs  prelude.rs  product_image_links.rs  product_model_image_links.rs  product_models.rs  products.rs  role.rs  roles.rs  session.rs  sessions.rs  user.rs  users.rs  warranties.rs  warranty.rs  work_order.rs  work_order_closing_forms.rs  work_order_image_links.rs  work_order_reject_forms.rs  work_order_state_history.rs  (+4 more)
src/extractor/: auth_user.rs  jwt_claims.rs  mod.rs  role_check.rs
src/infrastructure/: cache.rs  database.rs  mod.rs  mq.rs  observability.rs  scheduler.rs  templates.rs  tracing.rs
src/model/: jwt_claims.rs  mod.rs
src/repository/: account_status_repository.rs  mod.rs  role_repository.rs  session_repository.rs  (+1 more)
templates/: forgot_password_email.html  verification_email.html
tests/: login_tests.rs  register_tests.rs  work_orders_field_execution_tests.rs  work_orders_management_crud_tests.rs  work_orders_parts_integration_tests.rs  work_orders_resolution_closing_tests.rs  work_orders_state_management_tests.rs
(+152 files in other folders)
