[package]
name = "seeder"
version = "0.1.0"
edition = "2024"

[dependencies]
zent-be = { path = ".." }
sea-orm = { version = "1.1.19", features = [
    "sqlx-mysql",
    "runtime-tokio-native-tls",
    "macros",
] }
anyhow = "1.0.102"
chrono = "0.4.44"
rayon = "1.11.0"
regex = "1.12.3"
serde = "1.0.228"
serde_json = "1.0.149"
uuid = "1.22.0"
fake = { version = "4.4.0", features = ["derive", "uuid"] }
argon2 = "0.5.3"
rand = "0.8"
tokio = "1.50.0"
clap = { version = "4.6.0", features = ["derive"] }
dialoguer = "0.12.0"
